Feat : 노드 버전 변경

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,7 @@ frontend:
         - npm i
     build:
       commands:
+        - nvm install 20.0.0
         - npm run build
   artifacts:
     baseDirectory: .next
