--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,15 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install -g pnpm
+        - npm i
     build:
       commands:
+        - nvm install 20.0.0
         - npm run build
   artifacts:
     baseDirectory: .next
     files:
-      - "**/*"
+      - '**/*'
   cache:
     paths:
       - node_modules/**/*
