Docs : pr template 수정

--- a/.github/ISSUE_TEMPLATE/issue_template.yaml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yaml
@@ -44,8 +44,7 @@ body:
     attributes:
       label: 언제나 화이팅!!
       options:
-        - label:
-            소중한 시간 내주셔서 감사합니다. 🙇‍♂️ 꼭 포트폴리에 좋은 작업으로
+        - label: 소중한 시간 내주셔서 감사합니다. 🙇‍♂️ 꼭 포트폴리에 좋은 작업으로
             기록될 수 있도록 노력하겠습니다. ISSUE 제작자분의 노고의 항상
             감사드립니다. 🧡💛
           required: true
