--- a/package.json
+++ b/package.json
@@ -40,5 +40,11 @@
     "prettier": "^3.1.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
