--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "axios": "^1.6.2",
     "eslint-config-prettier": "^9.1.0",
     "next": "14.0.3",
     "react": "^18",
