--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jsdoc": "^4.0.2",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
