--- a/package.json
+++ b/package.json
@@ -9,11 +9,6 @@
     "lint": "next lint",
     "prepare": "husky install"
   },
-  "jest": {
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!lodash-es)"
-    ]
-  },
   "dependencies": {
     "@material-tailwind/react": "^2.1.5",
     "@tanstack/react-query": "^5.12.2",
@@ -30,6 +25,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-lottie-player": "^1.5.5",
     "recoil": "^0.7.7",
     "ts-jest": "^29.1.1",
     "zod": "^3.22.4"
