--- a/package.json
+++ b/package.json
@@ -13,28 +13,33 @@
     "@material-tailwind/react": "^2.1.5",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
-    "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.1",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "axios": "^1.6.2",
     "babel-jest": "^29.7.0",
     "eslint-config-prettier": "^9.1.0",
-    "jest-dom": "^4.0.0",
+    "framer-motion": "^10.16.16",
     "lodash-es": "^4.17.21",
     "next": "14.0.3",
+    "next-router-mock": "^0.9.10",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-lottie-player": "^1.5.5",
     "recoil": "^0.7.7",
+    "swiper": "^11.0.5",
     "ts-jest": "^29.1.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/jest-dom": "^6.1.5",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
@@ -47,11 +52,13 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
+    "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "jsdoc": "^4.0.2",
     "lint-staged": "^15.2.0",
     "postcss": "^8",
     "prettier": "^3.1.0",
+    "react-testing-library": "^8.0.1",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
   },
