Feat : yml 파일 환경변수 빌드 추가

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,6 +6,8 @@ frontend:
         - npm i
     build:
       commands:
+        - ACCESS_KEY_ID = ${ACCESS_KEY_ID}
+        - SECRET_ACCESS_KEY = ${SECRET_ACCESS_KEY}
         - npm run build
   artifacts:
     baseDirectory: .next
