--- a/amplify.yml
+++ b/amplify.yml
@@ -6,8 +6,8 @@ frontend:
         - npm i
     build:
       commands:
-        - ACCESS_KEY_ID = ${ACCESS_KEY_ID}
-        - SECRET_ACCESS_KEY = ${SECRET_ACCESS_KEY}
+        - ACCESS_KEY_ID = ./env
+        - SECRET_ACCESS_KEY = ./env
         - npm run build
   artifacts:
     baseDirectory: .next
