Feat : 환경변수 추가

--- a/amplify.yml
+++ b/amplify.yml
@@ -3,14 +3,19 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm i
+        - npm ci
         # Fetch ACCESS_KEY_ID and SECRET_ACCESS_KEY from AWS Systems Manager Parameter Store
         - export ACCESS_KEY_ID=$(aws ssm get-parameter --name /amplify/REBADGE-ME/ap-northeast-2/ACCESS_KEY_ID --with-decryption --query "Parameter.Value" --output text)
         - export SECRET_ACCESS_KEY=$(aws ssm get-parameter --name /amplify/REBADGE-ME/ap-northeast-2/SECRET_ACCESS_KEY --with-decryption --query "Parameter.Value" --output text)
+        # Print the values to verify
+        - echo "ACCESS_KEY_ID=$ACCESS_KEY_ID"
+        - echo "SECRET_ACCESS_KEY=$SECRET_ACCESS_KEY"
+        # Set the environment variables for the build process
+        - export ACCESS_KEY_ID
+        - export SECRET_ACCESS_KEY
     build:
       commands:
-        - env | grep ACCESS_KEY_ID # Verify that ACCESS_KEY_ID is available as an environment variable
-        - env | grep SECRET_ACCESS_KEY # Verify that SECRET_ACCESS_KEY is available as an environment variable
+        - env | grep -e ACCESS_KEY_ID -e SECRET_ACCESS_KEY >> .env.production
         - npm run build
   artifacts:
     baseDirectory: .next
@@ -19,3 +24,4 @@ frontend:
   cache:
     paths:
       - node_modules/**/*
+      - .next/cache/**/*
