--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "recoil": "^0.7.7",
     "swiper": "^11.0.5",
     "ts-jest": "^29.1.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
