--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "devDependencies": {
     "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^6.1.5",
+    "@types/gsap": "^3.0.0",
     "@types/jest": "^29.5.11",
     "@types/node": "^20",
     "@types/react": "^18",
