--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-lottie-player": "^1.5.5",
+    "react-markdown": "^9.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "rehype-highlight": "^7.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
     "swiper": "^11.0.5",
     "ts-jest": "^29.1.1",
     "xlsx": "^0.18.5",
