--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "jest"
   },
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.470.0",
     "@aws-sdk/lib-dynamodb": "^3.470.0",
     "@material-tailwind/react": "^2.1.5",
+    "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
+    "@types/react-syntax-highlighter": "^15.5.11",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "axios": "^1.6.2",
     "babel-jest": "^29.7.0",
@@ -26,15 +29,19 @@
     "next": "14.0.3",
     "next-router-mock": "^0.9.10",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
     "react-lottie-player": "^1.5.5",
     "react-markdown": "^9.0.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
+    "rehype-external-links": "^3.0.0",
     "rehype-highlight": "^7.0.0",
     "rehype-raw": "^7.0.0",
+    "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
+    "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5",
     "ts-jest": "^29.1.1",
     "xlsx": "^0.18.5",
@@ -45,8 +52,10 @@
     "@testing-library/jest-dom": "^6.1.5",
     "@types/gsap": "^3.0.0",
     "@types/jest": "^29.5.11",
+    "@types/lodash-es": "^4.17.12",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
     "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.0.1",
