--- a/package.json
+++ b/package.json
@@ -14,17 +14,22 @@
     "@aws-sdk/client-dynamodb": "^3.470.0",
     "@aws-sdk/lib-dynamodb": "^3.470.0",
     "@material-tailwind/react": "^2.1.5",
+    "@react-three/drei": "^9.97.0",
+    "@react-three/fiber": "^8.15.16",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.1",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/three": "^0.161.1",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "axios": "^1.6.2",
     "babel-jest": "^29.7.0",
     "eslint-config-prettier": "^9.1.0",
     "framer-motion": "^10.16.16",
+    "leva": "^0.9.35",
+    "lil-gui": "^0.19.1",
     "lodash-es": "^4.17.21",
     "next": "14.0.3",
     "next-router-mock": "^0.9.10",
@@ -34,6 +39,7 @@
     "react-hook-form": "^7.48.2",
     "react-lottie-player": "^1.5.5",
     "react-markdown": "^9.0.1",
+    "react-three-gui": "^0.4.2",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "rehype-external-links": "^3.0.0",
@@ -43,6 +49,7 @@
     "remark-gfm": "^4.0.0",
     "sweetalert2": "^11.10.1",
     "swiper": "^11.0.5",
+    "three": "^0.161.0",
     "ts-jest": "^29.1.1",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
