--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-hook-form": "^7.48.2",
     "react-lottie-player": "^1.5.5",
     "react-markdown": "^9.0.1",
+    "react-slick": "^0.30.2",
     "recoil": "^0.7.7",
     "recoil-persist": "^5.1.0",
     "rehype-external-links": "^3.0.0",
@@ -42,7 +43,7 @@
     "rehype-sanitize": "^6.0.0",
     "remark-gfm": "^4.0.0",
     "sweetalert2": "^11.10.1",
-    "swiper": "^11.0.5",
+    "swiper": "^11.0.7",
     "ts-jest": "^29.1.1",
     "xlsx": "^0.18.5",
     "zod": "^3.22.4"
@@ -57,6 +58,7 @@
     "@types/react": "^18",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "@types/testing-library__jest-dom": "^6.0.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.2.0",
