--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-dynamodb": "^3.470.0",
     "@aws-sdk/lib-dynamodb": "^3.470.0",
     "@material-tailwind/react": "^2.1.5",
+    "@react-spring/web": "^9.7.3",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^5.12.2",
     "@tanstack/react-query-devtools": "^5.13.3",
